# fastapi-vue-tortoise-template

./: .gitignore
src/backend/: pyproject.toml
src/backend/app/: main.py
src/backend/app/api/v1/: token.py  user.py
src/backend/app/core/: auth.py  config.py  security.py
src/backend/app/models/: base.py  user.py
src/backend/app/schemas/: base.py  user.py
src/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.vue  main.ts
src/frontend/src/router/: index.ts
src/frontend/src/services/: auth-header.ts  auth.service.ts
src/frontend/src/stores/: auth.ts
src/frontend/src/types/: environment.d.ts  router.d.ts  user.d.ts
src/frontend/src/views/: HomeView.vue  LoginView.vue  RegisterVue.vue
